--- a/src/app/style/hero.css
+++ b/src/app/style/hero.css
@@ -3,14 +3,16 @@
     justify-content: center;
     align-items: center;
     width: 100%;
+    min-height: 1000px;
     overflow-x: hidden;
+    background-color: black;
     }
     
-    .vidBack {
+    /* .vidBack {
       max-width: none;
       min-height: 1000px;
       background-color: black;
-    }
+    } */
     
     .name {
       color: white;
