--- a/src/app/style/hero.css
+++ b/src/app/style/hero.css
@@ -8,11 +8,11 @@
     background-color: black;
     }
     
-    /* .vidBack {
+    .vidBack {
       max-width: none;
       min-height: 1000px;
       background-color: black;
-    } */
+    }
     
     .name {
       color: white;
