--- a/src/app/style/carousel.css
+++ b/src/app/style/carousel.css
@@ -58,7 +58,7 @@
   
   .details-switch-demo-text-wrapper h1 {
     font-size: 18px;
-    margin: 5px auto;
+    /* margin: 5px auto; */
   }
   
   .details-switch-demo-text-wrapper em {
@@ -96,7 +96,7 @@
 
   .details-switch-demo-text-wrapper p {
   font-size: 0.8rem;
-  margin-bottom: 30px;
+  /* margin-bottom: 30px; */
   }
 
   .details-switch-demo-text-wrapper .banner-anim-elem a {
