--- a/src/app/style/heroRes.css
+++ b/src/app/style/heroRes.css
@@ -15,7 +15,7 @@
     
     .V {
       color: white;
-      margin-top: 8rem;
+      /* margin-top: 8rem; */
     }
   }
   
@@ -36,7 +36,7 @@
     
     .V {
       color: white;
-      margin-top: 5rem;
+      /* margin-top: 5rem; */
       font-size: 3rem;
     }
   }
@@ -66,7 +66,7 @@
     
     .V {
       color: white;
-      margin-top: 6rem;
+      /* margin-top: 6rem; */
       font-size: 4rem;
     }
   
@@ -91,7 +91,7 @@
     
     .V {
       color: white;
-      margin-top: 6rem;
+      /* margin-top: 6rem; */
       font-size: 3rem;
     }
   }
